libkmod/libkmod.h


struct kmod_ctx;
struct kmod_ctx *kmod_new(const char *dirname, const char *const *config_paths);
struct kmod_ctx *kmod_ref(struct kmod_ctx *ctx);
struct kmod_ctx *kmod_unref(struct kmod_ctx *ctx);
int kmod_load_resources(struct kmod_ctx *ctx);
void kmod_unload_resources(struct kmod_ctx *ctx);
void kmod_set_log_fn(struct kmod_ctx *ctx,
		     void (*log_fn)(void *log_data, int priority, const char *file,
				    int line, const char *fn, const char *format,
				    va_list args),
		     const void *data);
struct kmod_list;
struct kmod_list *kmod_list_last(const struct kmod_list *list);
struct kmod_list *kmod_list_next(const struct kmod_list *list,
				 const struct kmod_list *curr);
struct kmod_list *kmod_list_prev(const struct kmod_list *list,
				 const struct kmod_list *curr);
struct kmod_module;
int kmod_module_new_from_lookup(struct kmod_ctx *ctx, const char *given_alias,
				struct kmod_list **list);
int kmod_module_new_from_name(struct kmod_ctx *ctx, const char *name,
			      struct kmod_module **mod);
struct kmod_module *kmod_module_ref(struct kmod_module *mod);
struct kmod_module *kmod_module_unref(struct kmod_module *mod);
int kmod_module_unref_list(struct kmod_list *list);
int kmod_module_insert_module(struct kmod_module *mod, unsigned int flags,
			      const char *options);
enum kmod_probe {
	KMOD_PROBE_FORCE_VERMAGIC = 0x00001,
	KMOD_PROBE_FORCE_MODVERSION = 0x00002,
	KMOD_PROBE_IGNORE_COMMAND = 0x00004,
	KMOD_PROBE_IGNORE_LOADED = 0x00008,
	KMOD_PROBE_DRY_RUN = 0x00010,
	KMOD_PROBE_FAIL_ON_LOADED = 0x00020,
	KMOD_PROBE_APPLY_BLACKLIST_ALL = 0x10000,
	KMOD_PROBE_APPLY_BLACKLIST = 0x20000,
	KMOD_PROBE_APPLY_BLACKLIST_ALIAS_ONLY = 0x40000,
};
int kmod_module_probe_insert_module(
	struct kmod_module *mod, unsigned int flags, const char *extra_options,
	int (*run_install)(struct kmod_module *m, const char *cmdline, void *data),
	const void *data,
	void (*print_action)(struct kmod_module *m, bool install, const char *options));
int kmod_module_remove_module(struct kmod_module *mod, unsigned int flags);
struct kmod_module *kmod_module_get_module(const struct kmod_list *entry);
const char *kmod_module_get_install_commands(const struct kmod_module *mod);
const char *kmod_module_get_remove_commands(const struct kmod_module *mod);
const char *kmod_module_get_name(const struct kmod_module *mod);
const char *kmod_module_get_options(const struct kmod_module *mod);
const char *kmod_module_get_path(const struct kmod_module *mod);
int kmod_module_get_versions(const struct kmod_module *mod, struct kmod_list **list);
uint64_t kmod_module_version_get_crc(const struct kmod_list *entry);
const char *kmod_module_version_get_symbol(const struct kmod_list *entry);
void kmod_module_versions_free_list(struct kmod_list *list);
int kmod_module_get_info(const struct kmod_module *mod, struct kmod_list **list);
const char *kmod_module_info_get_key(const struct kmod_list *entry);
const char *kmod_module_info_get_value(const struct kmod_list *entry);
void kmod_module_info_free_list(struct kmod_list *list);
int kmod_module_new_from_loaded(struct kmod_ctx *ctx, struct kmod_list **list);
long kmod_module_get_size(const struct kmod_module *mod);
int kmod_module_get_refcnt(const struct kmod_module *mod);